basics and humidity

--- a/main.html
+++ b/main.html
@@ -4,14 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<script type="text/javascript" src="scripts/script.js" async></script>
 </head>
 <body>
 	<section class="top-banner">
   <div class="container">
-    <h1 class="heading">Simple Weather App</h1>
+    <h1 class="heading">Find out about the Weather?</h1>
     <form>
       <input type="text" placeholder="Search for a city" autofocus>
-      <button type="submit">SUBMIT</button>
+      <button type="submit">Time to go out?</button>
       <span class="msg"></span>
     </form>
   </div>
